fix: changed placement of hammer overlay, spawner fixes, correct tool type, better progress indicator on the hammer overlay